syntax = "proto3";

option csharp_namespace = "IdentityData.Grpc";

package identitydata;

service IdentityDataGrpc {
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
}

message GetStatusRequest {}

message GetStatusResponse {
  string status = 1;
}
